criação das rotas e pages

--- a/arq-desing-thiagoSa/src/main.css
+++ b/arq-desing-thiagoSa/src/main.css
@@ -77,7 +77,7 @@ a {
   justify-content: space-between;
 }
 
-@media (max-width 768px) {
+@media (max-width: 768px) {
   .container {
     width: 90%;
   }
