--- a/arq-desing-thiagoSa/src/main.css
+++ b/arq-desing-thiagoSa/src/main.css
@@ -42,6 +42,21 @@ a {
 .grey-1-color {
   color: #4d5053
 }
+h1, h2, h3, h4, h5, h6{
+  font-family: "DM Serif Display, serif";
+  font-size: inherit;
+  padding: 0;
+  margin: 0;
+  letter-spacing: 2.5px;
+}
+
+p {
+  line-height: 150%;
+}
+
+.txt-center{
+  text-align: center;
+}
 
 /* GRID */
 
