--- a/arq-desing-thiagoSa/src/main.css
+++ b/arq-desing-thiagoSa/src/main.css
@@ -42,6 +42,7 @@ a {
 .grey-1-color {
   color: #4d5053
 }
+
 h1, h2, h3, h4, h5, h6{
   font-family: "DM Serif Display, serif";
   font-size: inherit;
@@ -66,6 +67,7 @@ p {
   max-width: 1140px;
   position: relative;
   padding: 0 30px;
+  box-sizing: border-box;
 }
 
 .al-center {
