--- a/arq-desing-thiagoSa/src/main.css
+++ b/arq-desing-thiagoSa/src/main.css
@@ -43,6 +43,23 @@ a {
   color: #4d5053
 }
 
+.form-input {
+  border: none;
+  border-bottom: 1px solid #292F36;
+  color: #292F36;
+  font-size: 22px;
+  font-family: "Jost", sans-serif;
+  padding: 0 0 13px 0;
+  outline: none;
+  width: 100%;
+}
+
+.form-input::placeholder {
+  color: #292F36;
+  opacity: 1;
+}
+
+
 h1, h2, h3, h4, h5, h6{
   font-family: "DM Serif Display, serif";
   font-size: inherit;
