--- a/arq-desing-thiagoSa/src/components/Footer/Footer.css
+++ b/arq-desing-thiagoSa/src/components/Footer/Footer.css
@@ -49,6 +49,13 @@ footer .social-links a {
     column-gap: 23px;
  }
 
+ button.unstyled {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+  }
+
  @media (max-width: 768px){
     .footer_col {
         margin: 0 0 0 0;
